<?xml version="1.0"?>
<package format="2">
  <name>s550_launch</name>
  <version>1.0.0</version>
  <description>Launch files for S550 Hexacopter</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/uenota/s550_launch</url>
  <url type="bugtracker">https://github.com/uenota/s550_launch/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
